<?xml version="1.0"?>
<package format="2">
    <name>cuda_pcl_ros</name>
    <version>0.0.1</version>
    <description>The cuda_pcl_ros package</description>

    <maintainer email="lzs_1993@qq.com"></maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <depend>diagnostic_msgs</depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <depend>ga_cmake</depend>
    <depend>geometry_msgs</depend>
    <depend>message_runtime</depend>
    <depend>message_generation</depend>
</package>
